--- a/Guided_Capstone/Notebook_stepfourandfive.ipynb
+++ b/Guided_Capstone/Notebook_stepfourandfive.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -189,10 +189,10 @@
     "from sklearn import preprocessing\n",
     "\n",
     "# Declare an explanatory variable, called X,and assign it the result of dropping 'Name' and 'AdultWeekend' from the df\n",
-    "X = df.drop(['Name','AdultWeekend'], axis=1)\n",
+    "X = df.drop(['Name','AdultWeekend','clusters'], axis=1)\n",
     "\n",
     "# Declare a response variable, called y, and assign it the AdultWeekend column of the df \n",
-    "y = df.AdultWeekend \n",
+    "y = df['AdultWeekend'] \n",
     "\n",
     "# Here we use the StandardScaler() method of the preprocessing package, and then call the fit() method with parameter X \n",
     "scaler = preprocessing.StandardScaler().fit(X)\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -236,6 +236,7 @@
     "\n",
     "# Get the 1-dimensional flattened array of our response variable y by calling the ravel() function on y\n",
     "y = y.ravel()\n",
+    "\n",
     "\n",
     "# Call the train_test_split() function with the first two parameters set to X_scaled and y \n",
     "# Declare four variables, X_train, X_test, y_train and y_test separated by commas \n",
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -412,15 +413,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "explained_vaiance_score:  0.7479460682847957\n",
-      "mean_absolute_error:  5.884862602691478\n"
+      "explained_vaiance_score:  0.7474837944514854\n",
+      "mean_absolute_error:  5.885224347641935\n"
      ]
     }
    ],
@@ -443,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -454,7 +455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56.50937325713231\n"
+      "56.514164516897935\n"
      ]
     }
    ],
@@ -477,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -499,64 +500,63 @@
      "output_type": "stream",
      "text": [
       "                       Coefficient\n",
-      "trams                 1.486843e+13\n",
-      "fastEight             1.187914e+13\n",
-      "fastSixes             1.821280e+12\n",
-      "state_New York        1.019757e+12\n",
-      "state_Michigan        9.185761e+11\n",
-      "state_New Hampshire   7.971807e+11\n",
-      "state_Pennsylvania    7.625782e+11\n",
-      "state_Wisconsin       7.625782e+11\n",
-      "total_chairs          7.387561e+11\n",
-      "state_Minnesota       6.865142e+11\n",
-      "state_Vermont         6.442434e+11\n",
-      "state_California      6.442434e+11\n",
-      "state_Idaho           5.983621e+11\n",
-      "state_New Mexico      5.983621e+11\n",
-      "state_Maine           5.479642e+11\n",
-      "state_Connecticut     5.479642e+11\n",
-      "state_Wyoming         5.479642e+11\n",
-      "state_Massachusetts   4.916626e+11\n",
-      "state_Colorado        4.916626e+11\n",
-      "state_Ohio            4.916626e+11\n",
-      "state_North Carolina  4.271292e+11\n",
-      "state_West Virginia   4.271292e+11\n",
-      "state_Washington      4.271292e+11\n",
-      "state_Illinois        4.271292e+11\n",
-      "state_Utah            4.271292e+11\n",
-      "state_Oregon          4.271292e+11\n",
-      "state_Iowa            4.271292e+11\n",
-      "surface               4.204961e+11\n",
-      "double                3.984149e+11\n",
-      "state_Virginia        3.498377e+11\n",
-      "state_Missouri        3.498377e+11\n",
-      "state_Montana         3.498377e+11\n",
-      "state_Indiana         3.498377e+11\n",
-      "triple                3.476980e+11\n",
-      "state_Tennessee       2.481396e+11\n",
-      "state_New Jersey      2.481396e+11\n",
-      "state_Rhode Island    2.481396e+11\n",
-      "state_Maryland        2.481396e+11\n",
-      "state_Nevada          2.481396e+11\n",
-      "state_Alaska          2.481396e+11\n",
-      "state_Arizona         2.481396e+11\n",
-      "state_South Dakota    2.481396e+11\n",
-      "quad                  2.099431e+11\n",
-      "fastQuads             1.618355e+11\n",
-      "AdultWeekday          8.852051e+00\n",
-      "summit_elev           1.830926e+00\n",
-      "Runs                  1.714844e+00\n",
-      "NightSkiing_ac        1.481445e+00\n",
-      "Snow Making_ac        1.357788e+00\n",
-      "projectedDaysOpen     1.279297e+00\n",
-      "SkiableTerrain_ac     1.147339e+00\n",
-      "LongestRun_mi         8.461914e-01\n",
-      "averageSnowfall       7.175293e-01\n",
-      "yearsOpen             3.024902e-01\n",
-      "TerrainParks          1.730957e-01\n",
-      "vertical_drop         8.109020e-02\n",
-      "clusters              4.516602e-02\n",
-      "daysOpenLastYear      2.734375e-02\n"
+      "trams                 7.818026e+13\n",
+      "fastSixes             4.064353e+13\n",
+      "fastEight             3.069580e+13\n",
+      "total_chairs          7.884140e+12\n",
+      "surface               4.487611e+12\n",
+      "double                4.251957e+12\n",
+      "triple                3.710697e+12\n",
+      "quad                  2.240551e+12\n",
+      "fastQuads             1.727138e+12\n",
+      "state_New York        1.350195e+12\n",
+      "state_Michigan        1.216227e+12\n",
+      "state_New Hampshire   1.055496e+12\n",
+      "state_Wisconsin       1.009681e+12\n",
+      "state_Pennsylvania    1.009681e+12\n",
+      "state_Minnesota       9.089692e+11\n",
+      "state_California      8.530012e+11\n",
+      "state_Vermont         8.530012e+11\n",
+      "state_New Mexico      7.922528e+11\n",
+      "state_Idaho           7.922528e+11\n",
+      "state_Wyoming         7.255242e+11\n",
+      "state_Connecticut     7.255242e+11\n",
+      "state_Maine           7.255242e+11\n",
+      "state_Ohio            6.509789e+11\n",
+      "state_Colorado        6.509789e+11\n",
+      "state_Massachusetts   6.509789e+11\n",
+      "state_Iowa            5.655343e+11\n",
+      "state_Oregon          5.655343e+11\n",
+      "state_Utah            5.655343e+11\n",
+      "state_Illinois        5.655343e+11\n",
+      "state_Washington      5.655343e+11\n",
+      "state_West Virginia   5.655343e+11\n",
+      "state_North Carolina  5.655343e+11\n",
+      "state_Indiana         4.631976e+11\n",
+      "state_Montana         4.631976e+11\n",
+      "state_Missouri        4.631976e+11\n",
+      "state_Virginia        4.631976e+11\n",
+      "state_South Dakota    3.285457e+11\n",
+      "state_Arizona         3.285457e+11\n",
+      "state_Alaska          3.285457e+11\n",
+      "state_Maryland        3.285457e+11\n",
+      "state_Nevada          3.285457e+11\n",
+      "state_Rhode Island    3.285457e+11\n",
+      "state_New Jersey      3.285457e+11\n",
+      "state_Tennessee       3.285457e+11\n",
+      "AdultWeekday          8.851562e+00\n",
+      "Runs                  1.710938e+00\n",
+      "summit_elev           1.660951e+00\n",
+      "NightSkiing_ac        1.460449e+00\n",
+      "Snow Making_ac        1.386719e+00\n",
+      "projectedDaysOpen     1.301270e+00\n",
+      "SkiableTerrain_ac     1.164062e+00\n",
+      "LongestRun_mi         8.828125e-01\n",
+      "averageSnowfall       7.500000e-01\n",
+      "yearsOpen             3.144531e-01\n",
+      "TerrainParks          1.787109e-01\n",
+      "vertical_drop         1.111768e-01\n",
+      "daysOpenLastYear      2.929688e-02\n"
      ]
     }
    ],
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -598,12 +598,12 @@
    "source": [
     "# drop state column from dataframe\n",
     "df2 = pd.read_csv(os.path.join(data_dir,'step3_output.csv'),sep='\\t')\n",
-    "X2 = df2.drop(['state','Name','AdultWeekend'], axis=1)"
+    "X2 = df2.drop(['state','Name','AdultWeekend','clusters'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,15 +645,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "explained_vaiance_score:  0.7807643841713983\n",
-      "mean_absolute_error:  5.8255112895284515\n"
+      "explained_vaiance_score:  0.7462642033230734\n",
+      "mean_absolute_error:  6.072115242441133\n"
      ]
     }
    ],
@@ -667,14 +667,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56.600106549512034\n"
+      "56.734150613899715\n"
      ]
     }
    ],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -702,29 +702,28 @@
      "output_type": "stream",
      "text": [
       "                    Coefficient\n",
-      "AdultWeekday       1.056990e+01\n",
-      "summit_elev        3.146340e+00\n",
-      "clusters           2.934321e+00\n",
-      "vertical_drop      1.957885e+00\n",
-      "Snow Making_ac     1.344846e+00\n",
-      "quad               1.299931e+00\n",
-      "triple             1.294114e+00\n",
-      "SkiableTerrain_ac  1.276393e+00\n",
-      "averageSnowfall    1.265916e+00\n",
-      "daysOpenLastYear   1.097648e+00\n",
-      "LongestRun_mi      1.054733e+00\n",
-      "Runs               9.283392e-01\n",
-      "surface            9.217172e-01\n",
-      "fastQuads          9.157293e-01\n",
-      "double             8.445201e-01\n",
-      "projectedDaysOpen  8.223948e-01\n",
-      "total_chairs       7.087127e-01\n",
-      "NightSkiing_ac     4.356090e-01\n",
-      "yearsOpen          3.572944e-01\n",
-      "TerrainParks       3.009476e-01\n",
-      "fastEight          1.887379e-15\n",
-      "fastSixes          4.440892e-16\n",
-      "trams              0.000000e+00\n"
+      "AdultWeekday       1.119274e+01\n",
+      "vertical_drop      3.035008e+00\n",
+      "summit_elev        2.579744e+00\n",
+      "SkiableTerrain_ac  1.789168e+00\n",
+      "quad               1.774178e+00\n",
+      "LongestRun_mi      1.721203e+00\n",
+      "Snow Making_ac     1.443546e+00\n",
+      "projectedDaysOpen  1.242004e+00\n",
+      "triple             1.223300e+00\n",
+      "surface            1.205893e+00\n",
+      "daysOpenLastYear   1.172005e+00\n",
+      "fastQuads          1.077919e+00\n",
+      "double             1.037843e+00\n",
+      "averageSnowfall    8.153962e-01\n",
+      "total_chairs       7.171360e-01\n",
+      "Runs               3.673046e-01\n",
+      "NightSkiing_ac     1.506842e-01\n",
+      "TerrainParks       1.141282e-01\n",
+      "yearsOpen          3.177406e-02\n",
+      "trams              2.664535e-15\n",
+      "fastSixes          8.881784e-16\n",
+      "fastEight          2.220446e-16\n"
      ]
     }
    ],
@@ -754,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -764,12 +763,12 @@
    "source": [
     "# drop state column from dataframe\n",
     "df3 = pd.read_csv(os.path.join(data_dir,'step3_output.csv'),sep='\\t')\n",
-    "X3 = df3.drop(['state','Name','AdultWeekend','summit_elev'], axis=1)"
+    "X3 = df3.drop(['state','Name','AdultWeekend','summit_elev','clusters'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -790,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -805,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,15 +814,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "explained_vaiance_score:  0.7687761511806933\n",
-      "mean_absolute_error:  5.989618808873378\n"
+      "explained_vaiance_score:  0.7484766746519762\n",
+      "mean_absolute_error:  6.279077754949654\n"
      ]
     }
    ],
@@ -837,14 +836,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56.60500410984784\n"
+      "56.722808153096985\n"
      ]
     }
    ],
@@ -854,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -872,28 +871,27 @@
      "output_type": "stream",
      "text": [
       "                    Coefficient\n",
-      "AdultWeekday       1.039238e+01\n",
-      "clusters           2.517963e+00\n",
-      "averageSnowfall    2.431257e+00\n",
-      "vertical_drop      2.210937e+00\n",
-      "SkiableTerrain_ac  2.186104e+00\n",
-      "Snow Making_ac     1.359665e+00\n",
-      "triple             1.218603e+00\n",
-      "quad               1.039446e+00\n",
-      "double             1.010606e+00\n",
-      "total_chairs       9.786511e-01\n",
-      "NightSkiing_ac     9.226104e-01\n",
-      "LongestRun_mi      8.886487e-01\n",
-      "Runs               6.057426e-01\n",
-      "daysOpenLastYear   5.954527e-01\n",
-      "surface            5.713530e-01\n",
-      "fastQuads          5.025771e-01\n",
-      "projectedDaysOpen  4.778567e-01\n",
-      "TerrainParks       3.902142e-01\n",
-      "yearsOpen          3.791209e-01\n",
-      "trams              2.220446e-15\n",
-      "fastSixes          2.220446e-16\n",
-      "fastEight          0.000000e+00\n"
+      "AdultWeekday       1.096739e+01\n",
+      "vertical_drop      3.110985e+00\n",
+      "SkiableTerrain_ac  2.456987e+00\n",
+      "averageSnowfall    1.871428e+00\n",
+      "quad               1.514279e+00\n",
+      "LongestRun_mi      1.503176e+00\n",
+      "Snow Making_ac     1.467685e+00\n",
+      "triple             1.161987e+00\n",
+      "double             1.155078e+00\n",
+      "total_chairs       9.402450e-01\n",
+      "projectedDaysOpen  9.080206e-01\n",
+      "surface            8.853997e-01\n",
+      "daysOpenLastYear   7.409662e-01\n",
+      "fastQuads          7.119238e-01\n",
+      "NightSkiing_ac     3.161335e-01\n",
+      "TerrainParks       2.154870e-01\n",
+      "Runs               1.388118e-01\n",
+      "yearsOpen          3.285238e-02\n",
+      "trams              1.332268e-15\n",
+      "fastSixes          1.332268e-15\n",
+      "fastEight          4.440892e-16\n"
      ]
     }
    ],
@@ -930,9 +928,9 @@
    "source": [
     "| Model | Explained Variance| Mean Absolute Error|Features Dropped|\n",
     "| --- | --- | --- | --- |\n",
-    "| Model 1. | 0.7479460682847957 |5.884862602691478  ||\n",
-    "| Model 2. | 0.7807643841713983|5.8255112895284515 |'state'|\n",
-    "| Model 3. | 0.7687761511806933 |5.989618808873378 |'state','summit_elev','base_elev'|"
+    "| Model 1. | 0.7474837944514854 |5.885224347641935  ||\n",
+    "| Model 2. | 0.7462642033230734|6.072115242441133 |'state'|\n",
+    "| Model 3. | 0.7484766746519762 |6.279077754949654 |'state','summit_elev','base_elev'|"
    ]
   },
   {
@@ -955,7 +953,7 @@
    },
    "outputs": [],
    "source": [
-    "model2"
+    "model3"
    ]
   }
  ],
