--- a/Guided_Capstone/Notebook_steptwo.ipynb
+++ b/Guided_Capstone/Notebook_steptwo.ipynb
@@ -172,9 +172,13 @@
        " 'data',\n",
        " 'figures',\n",
        " 'models',\n",
+       " 'Notebook_stepfour.ipynb',\n",
+       " 'Notebook_stepfourandfive.ipynb',\n",
+       " 'Notebook_stepsix.ipynb',\n",
        " 'Notebook_stepthree.ipynb',\n",
        " 'Notebook_steptwo.ipynb',\n",
-       " 'updated_ski_data.csv']"
+       " 'updated_ski_data.csv',\n",
+       " 'updated_ski_data_old.csv']"
       ]
      },
      "execution_count": 3,
@@ -234,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -290,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -341,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 64,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -469,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -488,7 +492,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -560,7 +564,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -684,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -724,7 +728,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -785,7 +789,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -820,8 +824,8 @@
       "text/plain": [
        "New York               33\n",
        "Michigan               29\n",
-       "Sierra Nevada          22\n",
        "Colorado               22\n",
+       "Sierra Nevada          22\n",
        "Pennsylvania           19\n",
        "Wisconsin              16\n",
        "New Hampshire          16\n",
@@ -838,28 +842,28 @@
        "North Carolina          6\n",
        "Salt Lake City          6\n",
        "Oregon                  6\n",
-       "Ohio                    5\n",
        "Connecticut             5\n",
+       "Ohio                    5\n",
+       "Mt. Hood                4\n",
        "Virginia                4\n",
        "West Virginia           4\n",
        "Illinois                4\n",
-       "Mt. Hood                4\n",
-       "Iowa                    3\n",
        "Alaska                  3\n",
-       "Indiana                 2\n",
-       "Arizona                 2\n",
-       "Nevada                  2\n",
+       "Iowa                    3\n",
        "Missouri                2\n",
-       "New Jersey              2\n",
        "South Dakota            2\n",
+       "Indiana                 2\n",
+       "Nevada                  2\n",
+       "New Jersey              2\n",
+       "Arizona                 2\n",
        "Northern California     1\n",
-       "Rhode Island            1\n",
-       "Maryland                1\n",
        "Tennessee               1\n",
+       "Maryland                1\n",
+       "Rhode Island            1\n",
        "Name: Region, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1087,7 +1091,7 @@
        "NightSkiing_ac                    2                            650"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1469,7 +1473,7 @@
        "NightSkiing_ac      114.00    650.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1506,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1611,7 +1615,7 @@
        "yearsOpen          0.003030"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1670,27 +1674,27 @@
     {
      "data": {
       "text/plain": [
-       "0      0.0\n",
-       "1      0.0\n",
-       "2      0.0\n",
-       "3      0.0\n",
-       "4      NaN\n",
-       "      ... \n",
-       "325    NaN\n",
-       "326    0.0\n",
-       "327    NaN\n",
-       "328    0.0\n",
-       "329    NaN\n",
-       "Length: 330, dtype: float64"
+       "0      0\n",
+       "1      0\n",
+       "2      0\n",
+       "3      0\n",
+       "4      0\n",
+       "      ..\n",
+       "325    0\n",
+       "326    0\n",
+       "327    0\n",
+       "328    0\n",
+       "329    0\n",
+       "Length: 330, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chairs = ['trams','fastEight','fastSixes','fastQuads','quad','triple','double','surface']\n",
+    "chairs = ['trams','fastSixes','fastQuads','quad','triple','double','surface']\n",
     "c_count = 0\n",
     "for c in chairs:\n",
     "    c_count=c_count+ski[c]\n",
@@ -1722,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1745,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1797,16 +1801,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x109349650>]"
+       "[<matplotlib.lines.Line2D at 0x1a20d53650>]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1829,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1842,16 +1846,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a1eef9210>]"
+       "[<matplotlib.lines.Line2D at 0x1a20e08190>]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1874,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1888,16 +1892,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a1efd8f90>]"
+       "[<matplotlib.lines.Line2D at 0x1a20ed45d0>]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1920,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1929,16 +1933,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a1f012b10>]"
+       "[<matplotlib.lines.Line2D at 0x1a20ffb450>]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1961,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1971,16 +1975,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a1f1685d0>]"
+       "[<matplotlib.lines.Line2D at 0x1a2105be50>]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2003,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2012,16 +2016,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a1f23bf50>]"
+       "[<matplotlib.lines.Line2D at 0x1a21134410>]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2044,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2053,16 +2057,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a1f316b10>]"
+       "[<matplotlib.lines.Line2D at 0x1a21201950>]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2085,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2094,16 +2098,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a1f3cbdd0>]"
+       "[<matplotlib.lines.Line2D at 0x1a21325410>]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2126,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2135,16 +2139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a1f49f050>]"
+       "[<matplotlib.lines.Line2D at 0x1a2138b950>]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2167,26 +2171,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# we choose median to fill instead of mean because of the outlier\n",
-    "ski['LongestRun_mi'].fillna(method='ffill', inplace=True)"
+    "ski['SkiableTerrain_ac'].fillna(method='ffill', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a1f549810>]"
+       "[<matplotlib.lines.Line2D at 0x1a21450350>]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2209,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2229,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2294,7 +2298,7 @@
        "[0 rows x 27 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2316,6 +2320,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name                 0\n",
+       "Region               0\n",
+       "state                0\n",
+       "summit_elev          0\n",
+       "vertical_drop        0\n",
+       "base_elev            0\n",
+       "trams                0\n",
+       "fastEight            0\n",
+       "fastSixes            0\n",
+       "fastQuads            0\n",
+       "quad                 0\n",
+       "triple               0\n",
+       "double               0\n",
+       "surface              0\n",
+       "total_chairs         0\n",
+       "Runs                 0\n",
+       "TerrainParks         0\n",
+       "LongestRun_mi        0\n",
+       "SkiableTerrain_ac    0\n",
+       "Snow Making_ac       0\n",
+       "daysOpenLastYear     0\n",
+       "yearsOpen            0\n",
+       "averageSnowfall      0\n",
+       "AdultWeekday         0\n",
+       "AdultWeekend         0\n",
+       "projectedDaysOpen    0\n",
+       "NightSkiing_ac       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ski.isnull().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -2329,7 +2380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 65,
    "metadata": {
     "colab": {},
     "colab_type": "code",
